# a770-rgb

./: .gitignore  CMakeLists.txt  README.md
src/: hidutils.c  hidutils.h  ledzones.c  ledzones.h  main.c
udev/: 99-intel-a770.rules
